--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet"
 href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 <link rel="stylesheet" href="css/style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -24,8 +25,8 @@ href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
                     <nav class="menu">
                         <ul class="menu__list">
                             <li class="menu__list-item"><a href="Plants.html" class="menu__list-link ">О растениях</a></li>
-                            <li class="menu__list-item"><a href="#" class="menu__list-link">Сорта</a></li>
                             <li class="menu__list-item"><a href="#" class="menu__list-link">Агроновости</a></li>
+                            <li class="menu__list-item"><a href="#" class="menu__list-link">О нас</a></li>
                             <li class="menu__list-item"><a href="contact.html" class="menu__list-link">Контакты</a></li>
                         </ul>
                     </nav>
