--- a/sorts.html
+++ b/sorts.html
@@ -20,10 +20,10 @@
                     </a>
                     <nav class="menu">
                         <ul class="menu__list">
-                            <li class="menu__list-item"><a href="Plants.html" class="menu__list-link">О растениях</a></li>
-                            <li class="menu__list-item"><a href="#" class="menu__list-link">Сорта</a></li>
-                            <li class="menu__list-item"><a href="#" class="menu__list-link">Урожайность</a></li>
-                            <li class="menu__list-item"><a href="contact.html" class="menu__list-link">Контакты</a></li>
+                            <li class="menu__list-item"><a href="Plants.html" class="menu__list-link ">О растениях</a></li>
+                            <li class="menu__list-item"><a href="#" class="menu__list-link">Агроновости</a></li>
+                            <li class="menu__list-item"><a href="#" class="menu__list-link">О нас</a></li>
+                            <li class="menu__list-item"><a href="contact.html" class="menu__list-link">Контакты</a></li>ы
                         </ul>
                     </nav>
                 </div>
